# ultimate_technologies_challenge

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: ultimate_technologies_challenge.ipynb
ultimate_technologies_challenge/: __init__.py  dataset.py  features.py  plots.py
ultimate_technologies_challenge/modeling/: predict.py  train.py
